--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
                     menu
                 </span>
             </div>
+            <ul class="hamburger-menu">
+                <li><a href="#"  class="close-menu material-symbols-outlined" >dangerous</a></li>
+                <li><a href="index.html">首頁</a></li>
+                <li><a href="shop.html">商城</a></li>
+                <li><a href="login.html">登入</a></li>
+            </ul>
         </div>
 
         <div class="banner">
