--- a/index.html
+++ b/index.html
@@ -209,10 +209,10 @@
                     <ul>
                         <li>● 高雄市中正五路到底</li>
                         <li>
-                            ● <a href="tel:+886987654321"> +886 987-654-321</a>
+                            <a href="tel:+886987654321">●  +886 987-654-321</a>
                         </li>
                         <li>
-                            ● <a href="mailto:service@hexschool.com"> service@hexschool.com</a>
+                            <a href="mailto:service@hexschool.com">●  service@hexschool.com</a>
                         </li>
                     </ul>
                 </div>
