--- a/shop.html
+++ b/shop.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>六角西餐廳 | 商城</title>
+    <title>商城 | 六角西餐廳</title>
 
     
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
@@ -19,7 +19,7 @@
         <div class="navbar">
             <div class="logo">
                 <h1>
-                    <a href="#">六角西餐廳</a>
+                    <a href="index.html">六角西餐廳</a>
                 </h1>
             </div>
             <ul class="menu">
@@ -33,7 +33,6 @@
                 </span>
             </div>
             <ul class="hamburger-menu">
-                <li><a href="#"  class="close-menu material-symbols-outlined" >dangerous</a></li>
                 <li><a href="index.html">首頁</a></li>
                 <li><a href="shop.html">商城</a></li>
                 <li><a href="login.html">登入</a></li>
