--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>首頁 | 六角西餐廳</title>
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="六角西餐廳">
+    <meta property="og:description" content="咬一口就無法忘懷的漢堡，七夕絕對無法錯過的好滋味，六角大漢堡">
+    <meta property="og:url" content="https://tony42035.github.io/rwd-exam/">
+    <meta property="og:image" content="../images/header_desktop.png">
 
+
+    <title>首頁 | 六角西餐廳</title>
     
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
