--- a/shop.html
+++ b/shop.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="六角西餐廳">
+    <meta property="og:description" content="咬一口就無法忘懷的漢堡，七夕絕對無法錯過的好滋味，六角大漢堡">
+    <meta property="og:url" content="https://tony42035.github.io/rwd-exam/">
+    <meta property="og:image" content="	https://tony42035.github.io/rwd-exam/images/header_mobile.png">
+
     <title>商城 | 六角西餐廳</title>
 
     
