--- a/login.html
+++ b/login.html
@@ -66,13 +66,26 @@
 
 
         <div class="content">
-            <!--.
-                .
-                .
-                .
-                .
-                .
-            此區為content-->
+                <div class="login-page">
+                        <div class="login-title">
+                                <h2>六角西餐廳</h2>
+                                <h3>享受美食好味道</h3>
+                        </div>
+                        <div class="login-form-container">
+                                <form action="index.html" class="login-form">
+                                        <h4>LOGIN</h4>
+                                        <label for="myEmail">帳號*</label>
+                                        <input type="email" id="myEmail" required>
+                                        <label for="myPassword">密碼*</label>
+                                        <input type="password" id="myPassword" required>
+                                        <a href="#">忘記密碼？</a>
+                                        <div class="login-btn">
+                                            <a href="#" class="button-success pure-button ">註冊</a>
+                                            <button class="button-success pure-button " type="submit">登入</button>
+                                        </div>
+                                </form>
+                        </div>
+                </div>
         </div>
 
         <div class="footer">
